--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../04/css/reset.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.min.css">
     <title>Travely</title>
 </head>
@@ -76,7 +76,7 @@
         </div>
     </header>
     <main>
-        <!-- <section class="grid_section">
+        <section class="grid_section">
             <div class="section_main_text_wrapper">
                 <h3 class="section_name">Explore Destinations</h3>
                 <span class="section_little_text">
@@ -85,23 +85,23 @@
                 </span>
             </div>
             <div class="grid">
-                <div class="grid-item wide1">
-                    <img src="./img/for_grid_1.webp">
+                <div class="g1 box">
+                    <img class="grid_img" src="./img/for_grid_1.webp">
                 </div>
-                <div class="grid-item wide2">
-                    <img src="./img/for_grid_2.webp">
+                <div class= "g2 box">
+                    <img class="grid_img" src="./img/for_grid_2.webp">
                 </div>
-                <div class="grid-item wide3">
-                    <img src="./img/for_grid_3.webp">
+                <div class="g3 box">
+                    <img class="grid_img" src="./img/for_grid_3.webp">
                 </div>
-                <div class="grid-item wide4">
-                    <img src="./img/for_grid_4.webp">
+                <div class="g4 box">
+                    <img class="grid_img" src="./img/for_grid_4.webp">
                 </div>
-                <div class="grid-item wide5">
-                    <img src="./img/for_grid_5.webp">
+                <div class="g5 box">
+                    <img class="grid_img" src="./img/for_grid_5.webp">
                 </div>
-            </div>
-        </section> -->
+        </div>
+        </section>
         <section class="reasons">
             <div class="grid_table">
                 <div class="grid_table_item one">
